--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,29 @@
 header {
-  background-color: #333;
-  color: white;
-  text-align: center;
+  display: flex;
+  align-items: center;  /* 세로 중앙 정렬 */
+  justify-content: center;  /* 텍스트 중앙 정렬 */
   padding: 20px;
+  background-color: #333;
+  position: relative;
+  flex-direction: column;  /* 수직 방향으로 정렬 */
+}
+
+.logo {
+  position: absolute;
+  left: 20px;  /* 로고를 왼쪽 끝으로 배치 */
+  width: 50px;  /* 로고 크기 */
+  height: auto;
+}
+
+header h1, header p {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  margin: 5px 0;  /* 위아래 여백 추가 */
+  text-align: center;
+}
+
+header p {
+  font-size: 14px;
+  color: #ff6;
 }
