--- a/src/pages/Sheet.css
+++ b/src/pages/Sheet.css
@@ -6,6 +6,7 @@
   
   .sheet-grid {
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     justify-items: center;
